--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ author: Sky
 email: rlxo1651@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   디지털 노마드를 꿈꾸는 프론트엔드 개발자입니다.
-baseurl: "/" # the subpath of your site, e.g. /blog
+baseurl: "/ngh" # the subpath of your site, e.g. /blog
 google_analytics: 'UA-131540516-1' # change this to your GA key
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 include: ["_pages"]
